fix problem with buy ticket on mobile

--- a/assets/scss/top-actions.scss
+++ b/assets/scss/top-actions.scss
@@ -1,6 +1,8 @@
 .c-top-actions {
-  display: none;
-  
+  &--park {
+    display: none;
+  }
+
   &__filters-container {
     height: 42px;
     overflow: hidden;
@@ -51,7 +53,7 @@
         height: 24px;
       }
 
-      input[type=checkbox] {
+      input[type="checkbox"] {
         position: absolute;
         left: 0;
         top: 0;
@@ -133,5 +135,5 @@
 }
 
 .is-hidden {
-  display: none!important;
+  display: none !important;
 }
